--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 
 body {
   text-align: center;
+  font-size: 30px;
 }
 
 #display {
  width: 600px;
  height: 100px;
  border: 1px solid black;
+ line-height: 100px;
  margin-top: 5%;
  margin-left: 30%;
 }
@@ -22,5 +24,4 @@ table {
 table, td {
   border: 1px solid black;
   padding: 50px;
-  font-size: 30px;
 }
